data/all_generated_tests/raw_wast_tests/block_StackCorruption_1882.wast
;; 3. **Branch outside Block Scope**:    - Description: Implement branches (`br` or `br_if`) that unintentionally reference a label outside the current block's scope.    - Constraint: Label indexing and branching.    - Reasoning: Incorrect label indexing may cause jumps to invalid stack states, leading to stack corruption upon subsequent instructions.

(assert_invalid
  (module
    (func (block (br 2)))
  )
  "unknown label"
)